# pipe-puzzle-rs

./: Cargo.toml  build-wasm.bat  build.rs  index.html  pipe-mania.code-workspace
pkg/: pipe_puzzle.js  pipe_puzzle_bg.wasm
res/textures/: icons.txt  numbers.txt  pipe.txt
src/: audio_effect.rs  game.rs  lib.rs  main.rs  time.rs
src/game/: utils.rs
