[package]
name = "pipe-puzzle"
version = "0.1.0"
authors = ["Rafael"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sprite-render = { version = "0.1", path = "../sprite-render-rs" }
winit = "0.22"
rand = "0.7"
image = "0.23"
ezing = "0.2.1"

[build-dependencies]

rect_packer = "0.2"
image = "0.23"