[package]
name = "pipe-puzzle"
version = "0.1.0"
authors = ["Rafael"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pipe_puzzle_bin"
path = "src/main.rs"

[lib]
name = "pipe_puzzle"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]

opengl = ["sprite-render/opengl"]
webgl = ["sprite-render/webgl"]

[dependencies]

cfg-if = "0.1"
sprite-render = { version = "0.1", path = "../sprite-render-rs" }
audio-engine = { version = "0.1", path = "../audio-engine"}
winit = "0.22"
rand = { version = "0.7", features = ["small_rng"] }
image = "0.23"
ezing = "0.2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-timer = "0.2"

[build-dependencies]

rect_packer = "0.2"
image = "0.23"